<resources>
    <string name="app_name">Lab1</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="look">Look at my GUI!</string>
    <string name="click">Click here</string>
    <string name="check">Check this out</string>
    <string name="onOff">Switch on and off></string>
    <string name="typeHere">Type here</string>
    <string name="enterEmail">Enter your email address:</string>
    <string name="Login">Login</string>
    <string name="password">Type your password:</string>
    <string name="profile">Your profile</string>
    <string name="name">Your name:</string>
    <string name="enterName">Enter your name</string>
    <string name="yourEmail">Your email:</string>
    <string name="picture">Your picture:</string>
    <string name="takePic">Click the button above to take a picture</string>
    <string name="goToChat">Go to chat</string>
    <string name="send">SEND</string>
    <string name="receive">RECEIVE</string>
    
    <string name="goToWeather">Weather Forecast</string>

</resources>
