<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/main_layout"
    android:layout_columnSpan="2"
    android:layout_gravity="fill"
    android:layout_weight="1"
    android:columnCount="2"
    android:rowCount="4">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/look"
        android:textSize="30dp" />

    <Button
        android:id="@+id/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_weight="1"
        android:gravity="fill"
        android:text="@string/click" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_weight="1"
        android:gravity="fill"
        android:text="@string/check" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/flag" />

    <Switch
        android:id="@+id/Switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/onOff" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:hint="@string/typeHere"
        android:inputType="textPersonName" />

</GridLayout>

